cmss/main/default/objects/Asset/fields/AcceptedValue__c.field-meta.xml
<CustomField>
    <fullName>AcceptedValue__c</fullName>
    <label>Accepted Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>