cmss/main/default/objects/Asset/fields/AccountCity__c.field-meta.xml
<CustomField>
    <fullName>AccountCity__c</fullName>
    <description>Město klienta</description>
    <formula>Account.City__c</formula>
    <label>Account City</label>
    <type>Text</type>
</CustomField>