cmss/main/default/objects/Asset/fields/AccountGlobalID__c.field-meta.xml
<CustomField>
    <fullName>AccountGlobalID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Account Global ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>