cmss/main/default/objects/Asset/fields/AccountInformation__c.field-meta.xml
<CustomField>
    <fullName>AccountInformation__c</fullName>
    <description>Informace o klientovi</description>
    <formula>&quot;Věk klienta: &quot; &amp; TEXT(Age__c) &amp; BR() &amp;
&quot;Město: &quot; &amp; AccountCity__c &amp; BR() &amp;
&quot;PSČ: &quot; &amp;  AccountPostalCode__c</formula>
    <label>Account Information</label>
    <type>Text</type>
</CustomField>