cmss/main/default/objects/Asset/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <label>Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>