cmss/main/default/objects/Asset/fields/AccountOpening__c.field-meta.xml
<CustomField>
    <fullName>AccountOpening__c</fullName>
    <description>Otevření účtu</description>
    <label>Account Opening</label>
    <type>Date</type>
</CustomField>