cmss/main/default/objects/Asset/fields/AccountPostalCode__c.field-meta.xml
<CustomField>
    <fullName>AccountPostalCode__c</fullName>
    <description>PSČ klienta</description>
    <formula>Account.BillingPostalCode</formula>
    <label>Account Postal Code</label>
    <type>Text</type>
</CustomField>