cmss/main/default/objects/Asset/fields/AccountStatus__c.field-meta.xml
<CustomField>
    <fullName>AccountStatus__c</fullName>
    <description>Stav účtu</description>
    <label>Account Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>