cmss/main/default/objects/Asset/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>Account Type</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>