cmss/main/default/objects/Asset/fields/AcquisitionMethod__c.field-meta.xml
<CustomField>
    <fullName>AcquisitionMethod__c</fullName>
    <label>Acquisition Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>110</fullName>
            </value>
            <value>
                <fullName>111</fullName>
            </value>
            <value>
                <fullName>112</fullName>
            </value>
            <value>
                <fullName>113</fullName>
            </value>
            <value>
                <fullName>114</fullName>
            </value>
            <value>
                <fullName>115</fullName>
            </value>
            <value>
                <fullName>116</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>130</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>250</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>350</fullName>
            </value>
            <value>
                <fullName>351</fullName>
            </value>
            <value>
                <fullName>352</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>410</fullName>
            </value>
            <value>
                <fullName>450</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>501</fullName>
            </value>
            <value>
                <fullName>502</fullName>
            </value>
            <value>
                <fullName>550</fullName>
            </value>
            <value>
                <fullName>555</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>