cmss/main/default/objects/Asset/fields/ActivationDate__c.field-meta.xml
<CustomField>
    <fullName>ActivationDate__c</fullName>
    <description>Datum aktivace</description>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>