cmss/main/default/objects/Asset/fields/ActualInsuranceAmount__c.field-meta.xml
<CustomField>
    <fullName>ActualInsuranceAmount__c</fullName>
    <description>Skutečná sjednaná pojistná částka</description>
    <label>Actual Insurance Amount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>