cmss/main/default/objects/Asset/fields/ActualSolver__c.field-meta.xml
<CustomField>
    <fullName>ActualSolver__c</fullName>
    <description>Aktuální zpracovatel úvěru</description>
    <label>Actual Solver</label>
    <length>100</length>
    <type>Text</type>
</CustomField>