cmss/main/default/objects/Asset/fields/AddExtra__c.field-meta.xml
<CustomField>
    <fullName>AddExtra__c</fullName>
    <description>Doloženo navíc</description>
    <label>Add Extra</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>