cmss/main/default/objects/Asset/fields/AddNumberCurrentAccounts__c.field-meta.xml
<CustomField>
    <fullName>AddNumberCurrentAccounts__c</fullName>
    <label>Number of Additional Current Account</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>