cmss/main/default/objects/Asset/fields/AddressCity__c.field-meta.xml
<CustomField>
    <fullName>AddressCity__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Address City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>