cmss/main/default/objects/Asset/fields/AddressStreet__c.field-meta.xml
<CustomField>
    <fullName>AddressStreet__c</fullName>
    <label>Address Street</label>
    <length>80</length>
    <type>Text</type>
</CustomField>