cmss/main/default/objects/Asset/fields/AddressStreetNumber__c.field-meta.xml
<CustomField>
    <fullName>AddressStreetNumber__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Address Street Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>