cmss/main/default/objects/Asset/fields/AddressZipCode__c.field-meta.xml
<CustomField>
    <fullName>AddressZipCode__c</fullName>
    <label>Address Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>