cmss/main/default/objects/Asset/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Věk klienta</description>
    <formula>Account.PersonAge__c</formula>
    <label>Age</label>
    <type>Text</type>
</CustomField>