cmss/main/default/objects/Asset/fields/AgeForPensionPayments__c.field-meta.xml
<CustomField>
    <fullName>AgeForPensionPayments__c</fullName>
    <label>Age For Pension Payments</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>