cmss/main/default/objects/Asset/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>