cmss/main/default/objects/Asset/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <description>Alias</description>
    <formula>Account.Alias__c</formula>
    <label>Alias</label>
    <type>Text</type>
</CustomField>