cmss/main/default/objects/Asset/fields/AmountOverpaid__c.field-meta.xml
<CustomField>
    <fullName>AmountOverpaid__c</fullName>
    <label>Amount Overpaid</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>