cmss/main/default/objects/Asset/fields/AmountRepayment__c.field-meta.xml
<CustomField>
    <fullName>AmountRepayment__c</fullName>
    <label>Amount Repayment</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>