cmss/main/default/objects/Asset/fields/Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Anniversary__c</fullName>
    <description>Výročí - měsíc</description>
    <formula>MONTH( ProductCloseDate__c )</formula>
    <label>Anniversary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>