cmss/main/default/objects/Asset/fields/ApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDate__c</fullName>
    <description>Schválení</description>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>