cmss/main/default/objects/Asset/fields/ApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>ApprovedBy__c</fullName>
    <label> Approved By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>