cmss/main/default/objects/Asset/fields/Arranged__c.field-meta.xml
<CustomField>
    <fullName>Arranged__c</fullName>
    <label>Arranged</label>
    <type>Date</type>
</CustomField>