cmss/main/default/objects/Asset/fields/AssetNotes__c.field-meta.xml
<CustomField>
    <fullName>AssetNotes__c</fullName>
    <label>Asset Notes</label>
    <length>200</length>
    <type>Text</type>
</CustomField>