cmss/main/default/objects/Asset/fields/AssignedInterest__c.field-meta.xml
<CustomField>
    <fullName>AssignedInterest__c</fullName>
    <description>&quot;Připsané úroky
EDM_SPORICI_UCET.TOTAL_INTEREST_SAVINGS + EDM_SPORICI_UCET.TOTAL_INTEREST_STATE_CONTRIB + EDM_SPORICI_UCET.TOTAL_INTEREST_MANUAL&quot;</description>
    <label>Assigned Interest</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>