cmss/main/default/objects/Asset/fields/AssignmentConditionsDate__c.field-meta.xml
<CustomField>
    <fullName>AssignmentConditionsDate__c</fullName>
    <description>&quot;Datum, kdy byly splněny podmínky přidělení. 
Pokud dojde ke zpětným operacím, které mají vliv na splnění podmínek, pak dochází k přepočtu a změně tohoto datumu (měsíčně).&quot;</description>
    <label>Assignment Conditions Date</label>
    <type>Date</type>
</CustomField>