cmss/main/default/objects/Asset/fields/AssignmentDate__c.field-meta.xml
<CustomField>
    <fullName>AssignmentDate__c</fullName>
    <description>Datum přidělení</description>
    <label>Assignment Date</label>
    <type>Date</type>
</CustomField>