cmss/main/default/objects/Asset/fields/AssignmentType__c.field-meta.xml
<CustomField>
    <fullName>AssignmentType__c</fullName>
    <description>Vyjádření klienta k dotázání - S úvěrem, bez úvěru, Dotázán, nevysloveno přijetí</description>
    <label>Assignment Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>