cmss/main/default/objects/Asset/fields/AssumedPayoutDate__c.field-meta.xml
<CustomField>
    <fullName>AssumedPayoutDate__c</fullName>
    <label>Assumed Payout Date</label>
    <type>Date</type>
</CustomField>