cmss/main/default/objects/Asset/fields/AssuranceCountWith__c.field-meta.xml
<CustomField>
    <fullName>AssuranceCountWith__c</fullName>
    <description>Počet zajištění - se zajištěním</description>
    <label>Assurance Count With</label>
    <summaryFilterItems>
        <field>LoanAssurance__c.ReinsuranceType__c</field>
        <operation>equals</operation>
        <value>37</value>
    </summaryFilterItems>
    <summaryForeignKey>LoanAssurance__c.Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>