cmss/main/default/objects/Asset/fields/AssuranceCountWithout__c.field-meta.xml
<CustomField>
    <fullName>AssuranceCountWithout__c</fullName>
    <description>Počet zajištění - bez zajištění</description>
    <label>Assurance Count Without</label>
    <summaryFilterItems>
        <field>LoanAssurance__c.ReinsuranceType__c</field>
        <operation>equals</operation>
        <value>21</value>
    </summaryFilterItems>
    <summaryForeignKey>LoanAssurance__c.Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>