cmss/main/default/objects/Asset/fields/AssurancePercentage__c.field-meta.xml
<CustomField>
    <fullName>AssurancePercentage__c</fullName>
    <label>Assurance Percentage</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>