cmss/main/default/objects/Asset/fields/AssuranceType__c.field-meta.xml
<CustomField>
    <fullName>AssuranceType__c</fullName>
    <description>Zajištění</description>
    <formula>IF(
 AND(AssuranceCountWithout__c = 0,
     AssuranceCountWith__c = 0),
  &quot;&quot;,
  IF (
       AssuranceCountWith__c =1,
  &quot;Se zajištěním&quot;,
  IF (
  AssuranceCountWith__c =0,
   &quot;Bez zajištění&quot;,
   null
)
))</formula>
    <label>Assurance Type</label>
    <type>Text</type>
</CustomField>