cmss/main/default/objects/Asset/fields/AssuranceValue__c.field-meta.xml
<CustomField>
    <fullName>AssuranceValue__c</fullName>
    <label>Assurance Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>