cmss/main/default/objects/Asset/fields/AttendanceStamp__c.field-meta.xml
<CustomField>
    <fullName>AttendanceStamp__c</fullName>
    <label>Attendance Stamp</label>
    <type>Date</type>
</CustomField>