cmss/main/default/objects/Asset/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>