cmss/main/default/objects/Asset/fields/BankCode__c.field-meta.xml
<CustomField>
    <fullName>BankCode__c</fullName>
    <label>Bank Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>