cmss/main/default/objects/Asset/fields/BenefitType__c.field-meta.xml
<CustomField>
    <fullName>BenefitType__c</fullName>
    <label>Benefit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>