cmss/main/default/objects/Asset/fields/BindingPeriodDate__c.field-meta.xml
<CustomField>
    <fullName>BindingPeriodDate__c</fullName>
    <description>&quot;Datum, kdy účet již dosáhl hranice spoření 5/6 let (v závislosti  od zákona, platného v době založení účtu). Je to první den po uplynutí vázací doby, v kterém má klient nárok na státní podporu.
Datum konce vázací doby ve smyslu byznysu stavebního spoření.

Tj. ve většině případů
  DATUM_KONCE_VAZACI_DOBY = DATUM_ZALOZENI_SMLOUVY + 6 LET,

pro smlouvy založené před 2004
  DATUM_KONCE_VAZACI_DOBY = DATUM_ZALOZENI_SMLOUVY + 5 LET,

pro smlouvy, na kterých došlo k exekuci, předčasnému výběru prostředků na žádost klienta, převodu práv, či jinému aktu, který &quot;&quot;restartuje&quot;&quot; vázací dobu
  DATUM_KONCE_VAZACI_DOBY = &lt;datum aktu &quot;&quot;restartujícího&quot;&quot; vázací dobu&gt; + 6(5) LET&quot;</description>
    <label>Binding Period Date</label>
    <type>Date</type>
</CustomField>