cmss/main/default/objects/Asset/fields/Bonus1__c.field-meta.xml
<CustomField>
    <fullName>Bonus1__c</fullName>
    <description>BONUS1 – bonus v tarifu Aktiv do 6 let</description>
    <label>Bonus1</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>