cmss/main/default/objects/Asset/fields/Bonus2__c.field-meta.xml
<CustomField>
    <fullName>Bonus2__c</fullName>
    <description>BONUS2 – bonus v tarifu Aktiv 6-9 let</description>
    <label>Bonus2</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>