cmss/main/default/objects/Asset/fields/CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>CancellationReason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>288</fullName>
            </value>
            <value>
                <fullName>287</fullName>
            </value>
            <value>
                <fullName>292</fullName>
            </value>
            <value>
                <fullName>293</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>232</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>201</fullName>
            </value>
            <value>
                <fullName>202</fullName>
            </value>
            <value>
                <fullName>203</fullName>
            </value>
            <value>
                <fullName>204</fullName>
            </value>
            <value>
                <fullName>210</fullName>
            </value>
            <value>
                <fullName>212</fullName>
            </value>
            <value>
                <fullName>230</fullName>
            </value>
            <value>
                <fullName>240</fullName>
            </value>
            <value>
                <fullName>241</fullName>
            </value>
            <value>
                <fullName>242</fullName>
            </value>
            <value>
                <fullName>243</fullName>
            </value>
            <value>
                <fullName>244</fullName>
            </value>
            <value>
                <fullName>245</fullName>
            </value>
            <value>
                <fullName>246</fullName>
            </value>
            <value>
                <fullName>247</fullName>
            </value>
            <value>
                <fullName>248</fullName>
            </value>
            <value>
                <fullName>249</fullName>
            </value>
            <value>
                <fullName>250</fullName>
            </value>
            <value>
                <fullName>260</fullName>
            </value>
            <value>
                <fullName>261</fullName>
            </value>
            <value>
                <fullName>262</fullName>
            </value>
            <value>
                <fullName>263</fullName>
            </value>
            <value>
                <fullName>264</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>