cmss/main/default/objects/Asset/fields/ChargePaymentDate__c.field-meta.xml
<CustomField>
    <fullName>ChargePaymentDate__c</fullName>
    <label>Charge Payment Date</label>
    <type>Date</type>
</CustomField>