cmss/main/default/objects/Asset/fields/ClaimRetirementPensionDate__c.field-meta.xml
<CustomField>
    <fullName>ClaimRetirementPensionDate__c</fullName>
    <label>Claim Retirement Pension Date</label>
    <type>Date</type>
</CustomField>