cmss/main/default/objects/Asset/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <label>Client Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>