cmss/main/default/objects/Asset/fields/ClientTransfer__c.field-meta.xml
<CustomField>
    <fullName>ClientTransfer__c</fullName>
    <label>Client Transfer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>