cmss/main/default/objects/Asset/fields/ClosingAgentId__c.field-meta.xml
<CustomField>
    <fullName>ClosingAgentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Zprostředkovatel smlouvy - Uzavírajíci OZ</description>
    <label>Closing Agent Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>