cmss/main/default/objects/Asset/fields/ClosingAgentIsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>ClosingAgentIsCurrentUser__c</fullName>
    <description>Indicates that currently logged user is Closing Agent. Field was created for reporting purposes.</description>
    <formula>ClosingAgentId__r.Id = $User.Id</formula>
    <label>Closing Agent Is Current User</label>
    <type>Checkbox</type>
</CustomField>