cmss/main/default/objects/Asset/fields/ClosingAgentSortingCode__c.field-meta.xml
<CustomField>
    <fullName>ClosingAgentSortingCode__c</fullName>
    <description>TH zprostředkovatele</description>
    <formula>ClosingAgentId__r.SortingCode__c</formula>
    <label>Closing Agent Sorting Code</label>
    <type>Text</type>
</CustomField>