cmss/main/default/objects/Asset/fields/ClosureFee__c.field-meta.xml
<CustomField>
    <fullName>ClosureFee__c</fullName>
    <label>Closure Fee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>