cmss/main/default/objects/Asset/fields/ClosureFeeDate__c.field-meta.xml
<CustomField>
    <fullName>ClosureFeeDate__c</fullName>
    <description>Datum zaplacení poplatku</description>
    <label>Closure Fee Date</label>
    <type>Date</type>
</CustomField>