cmss/main/default/objects/Asset/fields/ClosureFeeNotice__c.field-meta.xml
<CustomField>
    <fullName>ClosureFeeNotice__c</fullName>
    <description
	>Prědpis poplatku za uzavření - Celkový historický objem předepsaných poplaktů za zvýšení CČ.</description>
    <label>Closure Fee Notice</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>