cmss/main/default/objects/Asset/fields/CltBirthNumber__c.field-meta.xml
<CustomField>
    <fullName>CltBirthNumber__c</fullName>
    <label>Clt Birth Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>