cmss/main/default/objects/Asset/fields/CltFirstname__c.field-meta.xml
<CustomField>
    <fullName>CltFirstname__c</fullName>
    <label>Clt Firstname</label>
    <length>25</length>
    <type>Text</type>
</CustomField>