cmss/main/default/objects/Asset/fields/CltFullname__c.field-meta.xml
<CustomField>
    <fullName>CltFullname__c</fullName>
    <label>Clt Fullname</label>
    <length>35</length>
    <type>Text</type>
</CustomField>