cmss/main/default/objects/Asset/fields/CltPremiName__c.field-meta.xml
<CustomField>
    <fullName>CltPremiName__c</fullName>
    <label>Premium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>