cmss/main/default/objects/Asset/fields/CltRelatedRole__c.field-meta.xml
<CustomField>
    <fullName>CltRelatedRole__c</fullName>
    <label>Clt Related Role</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>