cmss/main/default/objects/Asset/fields/CltSurname__c.field-meta.xml
<CustomField>
    <fullName>CltSurname__c</fullName>
    <label>Clt Surname</label>
    <length>35</length>
    <type>Text</type>
</CustomField>