cmss/main/default/objects/Asset/fields/CommissionAccountBase__c.field-meta.xml
<CustomField>
    <fullName>CommissionAccountBase__c</fullName>
    <formula>Account.PortfolioMngmtA__r.CommissionAccountBase__c</formula>
    <label>Commission Account Number Base</label>
    <type>Text</type>
</CustomField>