cmss/main/default/objects/Asset/fields/CommissionDate__c.field-meta.xml
<CustomField>
    <fullName>CommissionDate__c</fullName>
    <description>Datum, kdy smlouva splnila podmínky pro výplatu provize</description>
    <label>Commission Date</label>
    <type>Date</type>
</CustomField>