cmss/main/default/objects/Asset/fields/CompensationRightDate__c.field-meta.xml
<CustomField>
    <fullName>CompensationRightDate__c</fullName>
    <label>Compensation Right Date</label>
    <type>Date</type>
</CustomField>