cmss/main/default/objects/Asset/fields/ConditionFullfillmentDate__c.field-meta.xml
<CustomField>
    <fullName>ConditionFullfillmentDate__c</fullName>
    <label>Condition Fullfillment Date</label>
    <type>Date</type>
</CustomField>