cmss/main/default/objects/Asset/fields/ConfirmationDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationDate__c</fullName>
    <description>Datum potvrzení žádosti</description>
    <label>Confirmation Date</label>
    <type>Date</type>
</CustomField>