cmss/main/default/objects/Asset/fields/ContractConditions__c.field-meta.xml
<CustomField>
    <fullName>ContractConditions__c</fullName>
    <description>Všeobecné obchodní podmínky</description>
    <label>Contract Conditions</label>
    <length>200</length>
    <type>Text</type>
</CustomField>