cmss/main/default/objects/Asset/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <label>Contract Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>