cmss/main/default/objects/Asset/fields/ContractPrint__c.field-meta.xml
<CustomField>
    <fullName>ContractPrint__c</fullName>
    <description>Datum tisku (smluvní) dokumentace</description>
    <label>Contract Print</label>
    <type>Date</type>
</CustomField>