cmss/main/default/objects/Asset/fields/ContractSignDate__c.field-meta.xml
<CustomField>
    <fullName>ContractSignDate__c</fullName>
    <label>Contract Signature Date</label>
    <type>Date</type>
</CustomField>