cmss/main/default/objects/Asset/fields/ContractStatus__c.field-meta.xml
<CustomField>
    <fullName>ContractStatus__c</fullName>
    <label>Contract Status</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>