cmss/main/default/objects/Asset/fields/ContractTerminated__c.field-meta.xml
<CustomField>
    <fullName>ContractTerminated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vypovězeno ano/ne</description>
    <label>Contract Terminated</label>
    <type>Checkbox</type>
</CustomField>