cmss/main/default/objects/Asset/fields/ContractTerminationCanceled__c.field-meta.xml
<CustomField>
    <fullName>ContractTerminationCanceled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Výpověď stornována</description>
    <label>Contract Termination Canceled</label>
    <type>Checkbox</type>
</CustomField>