cmss/main/default/objects/Asset/fields/ContractTerminationDelivered__c.field-meta.xml
<CustomField>
    <fullName>ContractTerminationDelivered__c</fullName>
    <label>Contract Termination Delivered</label>
    <type>Date</type>
</CustomField>