cmss/main/default/objects/Asset/fields/ContractTerminationType__c.field-meta.xml
<CustomField>
    <fullName>ContractTerminationType__c</fullName>
    <description>&quot;Typ ukončení smlouvy - Důvod (způsob) vypořádání účtu.
FK do CIS_DUVOD_VYPORADANI_SS::KOD&quot;</description>
    <label>Contract Termination Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>101</fullName>
            </value>
            <value>
                <fullName>102</fullName>
            </value>
            <value>
                <fullName>103</fullName>
            </value>
            <value>
                <fullName>111</fullName>
            </value>
            <value>
                <fullName>121</fullName>
            </value>
            <value>
                <fullName>131</fullName>
            </value>
            <value>
                <fullName>901</fullName>
            </value>
            <value>
                <fullName>902</fullName>
            </value>
            <value>
                <fullName>903</fullName>
            </value>
            <value>
                <fullName>904</fullName>
            </value>
            <value>
                <fullName>905</fullName>
            </value>
            <value>
                <fullName>906</fullName>
            </value>
            <value>
                <fullName>907</fullName>
            </value>
            <value>
                <fullName>908</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>132</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>