cmss/main/default/objects/Asset/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Země</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>