cmss/main/default/objects/Asset/fields/CreditAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditAmount__c</fullName>
    <description>Po 1.čerpání úvěrových prostředků z účtu ÚSS, výška úvěru, jinak prázdná hodnota.</description>
    <label>Credit Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>