cmss/main/default/objects/Asset/fields/CreditCondition__c.field-meta.xml
<CustomField>
    <fullName>CreditCondition__c</fullName>
    <description>Platné obecné úvěrové podmínky</description>
    <label>Credit Condition</label>
    <length>30</length>
    <type>Text</type>
</CustomField>